# Nils-Auby

./: CMakeLists.txt  game.cpp  game.h  main.cpp
assets/data/: map.json
clock/: clock.cpp  clock.h
config/: config.cpp  config.h
map/: map.cpp  map.h
player/: player.cpp  player.h
texture_manager/: texture_manager.cpp  texture_manager.h
tile/: tile.cpp  tile.h
